# serializer version: 1
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_button_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_button_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (3)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (3)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-3-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_button_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Climate Sensor W100 Button (3)',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_button_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_button_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_button_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (4)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (4)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-4-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_button_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Climate Sensor W100 Button (4)',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_button_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_button_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_button_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (5)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (5)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-5-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_button_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Climate Sensor W100 Button (5)',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_button_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (1)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HJMT-6B Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (2)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (2)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-2-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HJMT-6B Button (2)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (3)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (3)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-3-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HJMT-6B Button (3)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (4)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (4)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-4-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HJMT-6B Button (4)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (5)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (5)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-5-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HJMT-6B Button (5)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (6)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (6)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-6-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_button_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HJMT-6B Button (6)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_dual_button_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (1)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000089-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA dual button Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_dual_button_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button_button_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_dual_button_button_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (2)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (2)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000089-MatterNodeDevice-2-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button_button_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA dual button Button (2)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_dual_button_button_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (1)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (2)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (2)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-2-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (2)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (3)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (3)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-3-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (3)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (4)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (4)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-4-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (4)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (5)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (5)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-5-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (5)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (6)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (6)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-6-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (6)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (7)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (7)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-7-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (7)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (8)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (8)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-8-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (8)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_button_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (9)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (9)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-9-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_button_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BILRESA scroll wheel Button (9)',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_button_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_config-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_config',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Config)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Config)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-5-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_config-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'White Series OnOff Switch Button (Config)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_config',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Down)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Down)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-4-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'White Series OnOff Switch Button (Down)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Up)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Up)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-3-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'White Series OnOff Switch Button (Up)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_button_config-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_config',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Config)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Config)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-5-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_button_config-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Inovelli Button (Config)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_config',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_button_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Down)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Down)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-4-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_button_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Inovelli Button (Down)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_button_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Up)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Up)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-3-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_button_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Inovelli Button (Up)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_action_switch][event.mock_action_switch_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_action_switch_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000016D-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_action_switch][event.mock_action_switch_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Action Switch Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_action_switch_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_doorbell][event.mock_doorbell_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_doorbell_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000003F-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_doorbell][event.mock_doorbell_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Doorbell Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_doorbell_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_generic_switch][event.mock_generic_switch_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000013-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_generic_switch][event.mock_generic_switch_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Generic Switch Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (1)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000012-MatterNodeDevice-1-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Generic Switch Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_button_fancy_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button_fancy_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button (Fancy Button)',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Fancy Button)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000012-MatterNodeDevice-2-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_button_fancy_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
        <ButtonEventType.LONG_PRESS_START: 'long_press_start'>,
        <ButtonEventType.LONG_PRESS_END: 'long_press_end'>,
        <ButtonEventType.MULTI_PRESS_ONGOING: 'multi_press_ongoing'>,
        <ButtonEventType.MULTI_PRESS_END: 'multi_press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Generic Switch Button (Fancy Button)',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button_fancy_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[silabs_light_switch][event.light_switch_example_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.light_switch_example_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Button',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000008E-MatterNodeDevice-2-GenericSwitchButton-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[silabs_light_switch][event.light_switch_example_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Light switch example Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.light_switch_example_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
